add: added title for iframe and color contrast

--- a/content/as-prop-pattern-react.mdx
+++ b/content/as-prop-pattern-react.mdx
@@ -28,6 +28,7 @@ In this example, the "as" prop tells the Button component to render its wrapper 
 
 <Embed
   type="CODESANDBOX"
+  title="CodeSandbox example of 'as' prop pattern in react"
   src="https://codesandbox.io/embed/as-prop-in-react-t9njgo?autoresize=1&fontsize=14&hidenavigation=1&theme=dark"
 />
 
