--- a/content/as-prop-pattern-react.mdx
+++ b/content/as-prop-pattern-react.mdx
@@ -1,7 +1,7 @@
 ---
 title: "as prop pattern in react"
 publishedAt: "2023-03-19"
-summary: "The 'as' prop pattern in React used in modern component libraries to specify underlying implementations. It provides examples and notes on best practices, making code more flexible and reusable."
+summary: "The 'as' allow us to render a component by specifying an HTML element or a custom component. It makes code more flexible and reusable."
 image: "/static/images/top-5-nextjs-resources/nextjs.png"
 ---
 
