add: added conclusion

--- a/content/as-prop-pattern-react.mdx
+++ b/content/as-prop-pattern-react.mdx
@@ -44,6 +44,8 @@ Card.defaultProps = {
 };
 ```
 
+## Conclusion
+
 It's important to note that the "as" prop should only be used to change the underlying implementation of a component and not its behaviour. If you need to change the behaviour of a component, you should use different props or create a new component altogether.
 
 Overall, the "as" prop pattern is a powerful tool that can help you write more flexible and reusable code in your React applications.
